--- a/notebook/Msc_Project.ipynb
+++ b/notebook/Msc_Project.ipynb
@@ -4922,9 +4922,9 @@
         "# Map income levels to numerical proxies (based on common assumptions, adjust if needed)\n",
         "# Assuming Low < Middle < High income\n",
         "income_mapping = {\n",
-        "    'Low': 1,      # Example numerical value for Low income\n",
-        "    'Middle': 2,   # Example numerical value for Middle income\n",
-        "    'High': 3      # Example numerical value for High income\n",
+        "    'Low': 1,      # numerical value for Low income\n",
+        "    'Middle': 2,   # numerical value for Middle income\n",
+        "    'High': 3      # numerical value for High income\n",
         "}\n",
         "\n",
         "# Apply the mapping to create a numerical income proxy\n",
@@ -4936,10 +4936,7 @@
         "\n",
         "\n",
         "print(\"Spend-to-Income Ratio feature added:\")\n",
-        "display(df_churn[['income_level', 'Income_Proxy', 'avg_order_value', 'Spend_to_Income_Ratio']].head())\n",
-        "\n",
-        "# You can also categorize this ratio if needed for further analysis\n",
-        "# For example, identify customers with very high spend relative to their income level"
+        "display(df_churn[['income_level', 'Income_Proxy', 'avg_order_value', 'Spend_to_Income_Ratio']].head())"
       ],
       "metadata": {
         "colab": {
@@ -5270,9 +5267,7 @@
         "display(df_churn[['income_level', 'avg_order_value', 'Spend_to_Income_Ratio', 'Spend_to_Income_Ratio_Quartile']].head())\n",
         "\n",
         "print(\"\\nDistribution of Spend-to-Income Ratio Quartiles:\")\n",
-        "display(df_churn['Spend_to_Income_Ratio_Quartile'].value_counts())\n",
-        "\n",
-        "# You can also analyze churn rate by these categories if interested"
+        "display(df_churn['Spend_to_Income_Ratio_Quartile'].value_counts())"
       ],
       "metadata": {
         "colab": {
@@ -6084,7 +6079,7 @@
         "\n",
         "# Visualize churn counts by Preferred Payment Method using a countplot\n",
         "plt.figure(figsize=(10, 6))\n",
-        "# Use sns.countplot to show counts of churn within each payment method\n",
+        "# Using sns.countplot to show counts of churn within each payment method\n",
         "ax = sns.countplot(x=\"preferred_payment\", hue=\"churn\", data=df_churn, palette='viridis')\n",
         "plt.title('Churn Counts by Preferred Payment Method')\n",
         "plt.xlabel('Preferred Payment Method')\n",
@@ -6092,7 +6087,7 @@
         "plt.xticks(rotation=45, ha='right') # Rotate labels for readability\n",
         "plt.tight_layout()\n",
         "\n",
-        "# Add count values on top of the bars\n",
+        "# Added count values on top of the bars\n",
         "for p in ax.patches:\n",
         "    ax.annotate(f'{int(p.get_height())}', # Display counts as integers\n",
         "                (p.get_x() + p.get_width() / 2., p.get_height()),\n",
@@ -6478,9 +6473,9 @@
       "cell_type": "code",
       "source": [
         "# Create age ranges\n",
-        "# Define age bins - you can adjust these based on your data and analysis needs\n",
+        "# Define age bins - can be adjusted based on data and analysis needs\n",
         "# Corrected age_bins to ensure unique edges\n",
-        "age_bins = [0, 18, 25, 35, 45, 55, 65, df_churn['age'].max() + 1] # Example bins, added +1 to max age to make the last bin inclusive\n",
+        "age_bins = [0, 18, 25, 35, 45, 55, 65, df_churn['age'].max() + 1]\n",
         "age_labels = ['0-18', '19-25', '26-35', '36-45', '46-55', '56-65', '65+'] # Labels for the bins\n",
         "\n",
         "# Ensure the number of labels is one less than the number of bins\n",
@@ -7029,7 +7024,7 @@
         "plt.xlabel('Gender')\n",
         "plt.ylabel('Count')\n",
         "\n",
-        "# Add value labels on top of the bars\n",
+        "# Added value labels on top of the bars\n",
         "for p in ax.patches:\n",
         "    ax.annotate(f'{p.get_height()}',\n",
         "                (p.get_x() + p.get_width() / 2., p.get_height()),\n",
@@ -7064,7 +7059,7 @@
       "cell_type": "code",
       "source": [
         "from sklearn.preprocessing import OrdinalEncoder\n",
-        "import numpy as np # Import numpy for np.nan\n",
+        "import numpy as np\n",
         "\n",
         "# Identify ordinal features and their order\n",
         "# Need to handle potential NaN in Age_Range if any age falls outside bins\n",
@@ -7427,7 +7422,7 @@
       "source": [
         "from sklearn.preprocessing import OneHotEncoder\n",
         "\n",
-        "# === 1️⃣ Identify categorical features, exclude ordinal, identifier, target, and numeric ===\n",
+        "# Identify categorical features, exclude ordinal, identifier, target, and numeric ===\n",
         "ordinal_features = ['income_level', 'Age_Range', 'Spend_to_Income_Ratio_Quartile']\n",
         "\n",
         "# Select object-type columns only (exclude numeric)\n",
@@ -7442,12 +7437,12 @@
         "\n",
         "print(\"Nominal features identified for One-Hot Encoding:\", nominal_features)\n",
         "\n",
-        "# === 2️⃣ Apply One-Hot Encoding ===\n",
+        "# Apply One-Hot Encoding\n",
         "one_hot_encoder = OneHotEncoder(handle_unknown='ignore', sparse_output=False)  # or sparse=False if sklearn < 1.2\n",
         "df_churn_nominal = df_churn[nominal_features].copy()\n",
         "nominal_encoded_data = one_hot_encoder.fit_transform(df_churn_nominal)\n",
         "\n",
-        "# === 3️⃣ Create DataFrame from encoded data ===\n",
+        "# Create DataFrame from encoded data\n",
         "nominal_encoded_df = pd.DataFrame(\n",
         "    nominal_encoded_data,\n",
         "    columns=one_hot_encoder.get_feature_names_out(nominal_features),\n",
@@ -7914,22 +7909,22 @@
     {
       "cell_type": "code",
       "source": [
-        "# === 1️⃣ Prepare numeric subset ===\n",
+        "# Prepare numeric subset\n",
         "numeric_cols = df_churn.select_dtypes(include=np.number).columns.tolist()\n",
         "numeric_cols = [col for col in numeric_cols if col != 'churn']  # exclude target\n",
         "numeric_subset = df_churn[['customer_id', 'churn'] + numeric_cols].copy()\n",
         "numeric_subset['churn'] = numeric_subset['churn'].astype(int)\n",
         "numeric_subset = numeric_subset.rename(columns={'customer_id': 'CustomerID'})\n",
         "\n",
-        "# === 2️⃣ Concatenate numeric, ordinal, and nominal features ===\n",
+        "# Concatenate numeric, ordinal, and nominal features\n",
         "df_churn_structured_encoded = pd.concat([\n",
         "    numeric_subset,            # numeric + CustomerID + churn\n",
         "    df_churn_ordinal_encoded,  # ordinal encoded features\n",
         "    nominal_encoded_df         # one-hot encoded features\n",
         "], axis=1)\n",
         "\n",
-        "# === 3️⃣ Quick checks ===\n",
-        "print(\"✅ Combined structured DataFrame ready for merging with embeddings\")\n",
+        "# Quick checks\n",
+        "print(\"Combined structured DataFrame ready for merging with embeddings\")\n",
         "print(\"Shape:\", df_churn_structured_encoded.shape)\n",
         "print(\"Missing values:\", df_churn_structured_encoded.isnull().sum().sum())\n",
         "print(\"Churn unique values:\", df_churn_structured_encoded['churn'].unique())\n",
@@ -9103,7 +9098,7 @@
         "import nltk\n",
         "from nltk.corpus import stopwords\n",
         "import string\n",
-        "import emoji  #Include emoji handling as discussed previously if needed\n",
+        "import emoji\n",
         "\n",
         "# Download stopwords if not already downloaded\n",
         "try:\n",
@@ -48621,10 +48616,7 @@
       "source": [
         "import joblib\n",
         "\n",
-        "# Define the filename for the saved model\n",
         "model_filename = 'xgboost_churn_model.pkl'\n",
-        "\n",
-        "# Save the trained XGBoost model\n",
         "joblib.dump(xgb_model, model_filename)\n",
         "\n",
         "print(f\"XGBoost model saved to '{model_filename}'\")"
